feat: Add Product Category feature
This commit introduces product categories to the application. Users can now
create, manage, and assign categories to products. Category information
is also included in product details and data exports.

Key additions and changes:
- Created `Category` entity with a ManyToOne relationship from `Product`.
- Implemented `CategoryRepository`.
- Developed a Category Management API (`/api/categories`):
    - DTOs: `CategoryRequestDTO`, `CategoryResponseDTO`.
    - `CategoryService`: Handles CRUD operations, unique name validation,
      and prevents deletion of categories in use.
    - `CategoryController`: Exposes secured REST endpoints for managing
      categories (ADMIN for CUD, MANAGER/ADMIN for Read).
- Integrated categories into the Product Management API:
    - `ProductRequestDTO` now accepts an optional `categoryId`.
    - `ProductResponseDTO` now includes category details.
    - `ProductService` updated to handle linking products to categories.
- Integrated category information (categoryName) into the Data Export API
  (`SalesDataExportDTO`).
- Added comprehensive unit tests for all new and modified services and
  controllers related to categories.