@@ -2,6 +2,7 @@ package com.empresa.demostockapp.controller;
 
 import com.empresa.demostockapp.dto.ProductRequestDTO;
 import com.empresa.demostockapp.dto.ProductResponseDTO;
+import com.empresa.demostockapp.dto.category.CategoryResponseDTO; // Added
 import com.empresa.demostockapp.exception.ResourceNotFoundException;
 import com.empresa.demostockapp.security.jwt.JwtUtils;
 import com.empresa.demostockapp.security.services.UserDetailsServiceImpl;
@@ -18,6 +19,7 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.math.BigDecimal;
 import java.util.Collections;
+import java.util.List; // Added
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
@@ -27,6 +29,7 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.nullValue; // Added
 
 
 @WebMvcTest(ProductController.class)
@@ -39,8 +42,6 @@ class ProductControllerTest {
     @MockBean
     private ProductService productService;
 
-    // Mock UserDetailsServiceImpl and JwtUtils as they are part of the security setup
-    // that WebMvcTest might try to initialize.
     @MockBean
     private UserDetailsServiceImpl userDetailsService;
 
@@ -51,16 +52,43 @@ class ProductControllerTest {
     private ObjectMapper objectMapper;
 
     private ProductRequestDTO productRequestDTO;
+    private ProductRequestDTO productRequestWithCategoryDTO;
     private ProductResponseDTO productResponseDTO;
+    private ProductResponseDTO productResponseWithCategoryDTO;
+    private CategoryResponseDTO categoryResponseDTO;
+
 
     @BeforeEach
     void setUp() {
-        productRequestDTO = new ProductRequestDTO("Test Product", "Description", BigDecimal.valueOf(100.00), "SKU123");
-        productResponseDTO = new ProductResponseDTO(1L, "Test Product", "Description", BigDecimal.valueOf(100.00), "SKU123");
+        // DTO for requests without category
+        productRequestDTO = new ProductRequestDTO("Test Product", "Description", BigDecimal.valueOf(100.00), "SKU123", null);
+
+        // DTO for requests with category
+        productRequestWithCategoryDTO = new ProductRequestDTO("Test Product with Cat", "Cat Description", BigDecimal.valueOf(120.00), "SKU456", 10L);
+
+        // DTO for responses without category
+        productResponseDTO = new ProductResponseDTO(); // Using default constructor, then setters
+        productResponseDTO.setId(1L);
+        productResponseDTO.setName("Test Product");
+        productResponseDTO.setDescription("Description");
+        productResponseDTO.setPrice(BigDecimal.valueOf(100.00));
+        productResponseDTO.setSku("SKU123");
+        productResponseDTO.setCategory(null);
+
+        // DTO for responses with category
+        categoryResponseDTO = new CategoryResponseDTO(10L, "Electronics", "Electronic devices");
+        productResponseWithCategoryDTO = new ProductResponseDTO();
+        productResponseWithCategoryDTO.setId(2L);
+        productResponseWithCategoryDTO.setName("Test Product with Cat");
+        productResponseWithCategoryDTO.setPrice(BigDecimal.valueOf(120.00));
+        productResponseWithCategoryDTO.setSku("SKU456");
+        productResponseWithCategoryDTO.setCategory(categoryResponseDTO);
+
     }
 
+    // --- CreateProduct Tests (POST /api/products) ---
     @Test
-    void createProduct_success() throws Exception {
+    void createProduct_success_withoutCategory() throws Exception {
         when(productService.createProduct(any(ProductRequestDTO.class))).thenReturn(productResponseDTO);
 
         mockMvc.perform(post("/api/products")
@@ -68,87 +96,153 @@ class ProductControllerTest {
                         .content(objectMapper.writeValueAsString(productRequestDTO)))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.id", is(1)))
-                .andExpect(jsonPath("$.name", is("Test Product")));
+                .andExpect(jsonPath("$.name", is("Test Product")))
+                .andExpect(jsonPath("$.category", is(nullValue())));
     }
 
     @Test
+    void createProduct_success_withCategory() throws Exception {
+        when(productService.createProduct(any(ProductRequestDTO.class))).thenReturn(productResponseWithCategoryDTO);
+
+        mockMvc.perform(post("/api/products")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(productRequestWithCategoryDTO)))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.id", is(2)))
+                .andExpect(jsonPath("$.name", is("Test Product with Cat")))
+                .andExpect(jsonPath("$.category.id", is(10)))
+                .andExpect(jsonPath("$.category.name", is("Electronics")));
+    }
+
+    @Test
+    void createProduct_invalidCategoryId_returnsNotFound() throws Exception {
+        when(productService.createProduct(any(ProductRequestDTO.class)))
+            .thenThrow(new ResourceNotFoundException("Category not found with id: " + productRequestWithCategoryDTO.getCategoryId()));
+
+        mockMvc.perform(post("/api/products")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(productRequestWithCategoryDTO)))
+                .andExpect(status().isNotFound())
+                .andExpect(content().string("Category not found with id: " + productRequestWithCategoryDTO.getCategoryId()));
+    }
+
+
+    // --- GetAllProducts Test (GET /api/products) ---
+    @Test
     void getAllProducts_success() throws Exception {
-        when(productService.getAllProducts()).thenReturn(Collections.singletonList(productResponseDTO));
+        // Assume one product with category, one without
+        ProductResponseDTO p1 = new ProductResponseDTO(); p1.setId(1L); p1.setName("P1"); p1.setCategory(null);
+        ProductResponseDTO p2 = new ProductResponseDTO(); p2.setId(2L); p2.setName("P2");
+        p2.setCategory(new CategoryResponseDTO(10L, "CatName", null));
+
+        when(productService.getAllProducts()).thenReturn(List.of(p1, p2));
 
         mockMvc.perform(get("/api/products"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].name", is("Test Product")));
+                .andExpect(jsonPath("$", hasSize(2)))
+                .andExpect(jsonPath("$[0].name", is("P1")))
+                .andExpect(jsonPath("$[0].category", is(nullValue())))
+                .andExpect(jsonPath("$[1].name", is("P2")))
+                .andExpect(jsonPath("$[1].category.name", is("CatName")));
+    }
+
+    // --- GetProductById Tests (GET /api/products/{id}) ---
+    @Test
+    void getProductById_success_withCategory() throws Exception {
+        when(productService.getProductById(2L)).thenReturn(productResponseWithCategoryDTO);
+
+        mockMvc.perform(get("/api/products/2"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id", is(2)))
+                .andExpect(jsonPath("$.name", is("Test Product with Cat")))
+                .andExpect(jsonPath("$.category.id", is(10)));
     }
 
     @Test
-    void getProductById_success() throws Exception {
+    void getProductById_success_withoutCategory() throws Exception {
         when(productService.getProductById(1L)).thenReturn(productResponseDTO);
 
         mockMvc.perform(get("/api/products/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id", is(1)))
-                .andExpect(jsonPath("$.name", is("Test Product")));
+                .andExpect(jsonPath("$.name", is("Test Product")))
+                .andExpect(jsonPath("$.category", is(nullValue())));
     }
 
+
     @Test
-    void getProductById_notFound() throws Exception {
+    void getProductById_notFound() throws Exception { // No change needed here
         when(productService.getProductById(1L)).thenThrow(new ResourceNotFoundException("Product not found with id: 1"));
-
         mockMvc.perform(get("/api/products/1"))
-                .andExpect(status().isNotFound())
-                .andExpect(content().string("Product not found with id: 1")); // GlobalExceptionHandler should handle this
+                .andExpect(status().isNotFound());
+    }
+
+    // --- UpdateProduct Tests (PUT /api/products/{id}) ---
+    @Test
+    void updateProduct_success_withCategory() throws Exception {
+        when(productService.updateProduct(anyLong(), any(ProductRequestDTO.class))).thenReturn(productResponseWithCategoryDTO);
+
+        mockMvc.perform(put("/api/products/2")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(productRequestWithCategoryDTO)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id", is(2)))
+                .andExpect(jsonPath("$.category.id", is(10)));
     }
 
     @Test
-    void updateProduct_success() throws Exception {
-        when(productService.updateProduct(anyLong(), any(ProductRequestDTO.class))).thenReturn(productResponseDTO);
+    void updateProduct_success_setCategoryToNull() throws Exception {
+        // Request to update product 2 (which had a category) to have no category
+        ProductRequestDTO reqToNullCat = new ProductRequestDTO("Updated Name", "Desc", BigDecimal.ONE, "SKU456", null);
+        // Response DTO reflects category is now null
+        ProductResponseDTO resWithNullCat = new ProductResponseDTO();
+        resWithNullCat.setId(2L); resWithNullCat.setName("Updated Name"); resWithNullCat.setCategory(null);
+
+        when(productService.updateProduct(eq(2L), any(ProductRequestDTO.class))).thenReturn(resWithNullCat);
+
+        mockMvc.perform(put("/api/products/2")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(reqToNullCat)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id", is(2)))
+                .andExpect(jsonPath("$.category", is(nullValue())));
+    }
+
+    @Test
+    void updateProduct_invalidCategoryId_returnsNotFound() throws Exception {
+         when(productService.updateProduct(anyLong(), any(ProductRequestDTO.class)))
+            .thenThrow(new ResourceNotFoundException("Category not found with id: " + productRequestWithCategoryDTO.getCategoryId()));
 
         mockMvc.perform(put("/api/products/1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(productRequestDTO)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id", is(1)))
-                .andExpect(jsonPath("$.name", is("Test Product")));
+                        .content(objectMapper.writeValueAsString(productRequestWithCategoryDTO)))
+                .andExpect(status().isNotFound())
+                .andExpect(content().string("Category not found with id: " + productRequestWithCategoryDTO.getCategoryId()));
     }
 
     @Test
-    void updateProduct_notFound() throws Exception {
+    void updateProduct_productNotFound() throws Exception { // No change needed here
         when(productService.updateProduct(anyLong(), any(ProductRequestDTO.class)))
             .thenThrow(new ResourceNotFoundException("Product not found with id: 1"));
-
         mockMvc.perform(put("/api/products/1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(productRequestDTO)))
-                .andExpect(status().isNotFound())
-                .andExpect(content().string("Product not found with id: 1"));
+                .andExpect(status().isNotFound());
     }
 
-
+    // --- DeleteProduct Tests (DELETE /api/products/{id}) ---
+    // These tests do not need to change as delete operation is not directly affected by category on product.
     @Test
     void deleteProduct_success() throws Exception {
         doNothing().when(productService).deleteProduct(1L);
-
         mockMvc.perform(delete("/api/products/1"))
                 .andExpect(status().isNoContent());
     }
 
     @Test
     void deleteProduct_notFound() throws Exception {
-        // Mock the service to throw ResourceNotFoundException when deleteProduct is called for a non-existent ID
-        // The ProductService itself handles the findById check before deletion.
-        // So, we configure deleteProduct to throw the exception if the service's pre-check fails.
-        // However, for controller test, we assume service correctly throws if product to delete is not found.
-        // The service's deleteProduct method would throw ResourceNotFoundException if findById fails.
-        // So we directly mock that behaviour from the service for this controller test.
-
-        // Correct approach: productService.deleteProduct itself might throw if the pre-check (findById) fails.
-        // So we mock this behavior:
         org.mockito.Mockito.doThrow(new ResourceNotFoundException("Product not found with id: 1")).when(productService).deleteProduct(1L);
-
-
         mockMvc.perform(delete("/api/products/1"))
-                .andExpect(status().isNotFound())
-                .andExpect(content().string("Product not found with id: 1"));
+                .andExpect(status().isNotFound());
     }
 }
